@@ -14,7 +14,7 @@ dependencies {
 	//implementation project(path: ':common')
    // api 'com.google.auto.value:auto-value-annotations:1.11.0'
 	//implementation "com.google.guava:guava:33.3.0-jre"
-	//implementation project(path: ':javac')
+	implementation project(path: ':javac')
   api 'com.google.googlejavaformat:google-java-format:1.28.0'
 }
 
@@ -24,14 +24,4 @@ spotless {
 			googleJavaFormat()
 			}
 }
-tasks.withType(JavaCompile).configureEach {
-    options.fork = true
-    options.forkOptions.jvmArgs += [
-        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    ]
-}
+ 
